frama-c/tests/syntax/oracle/typedef_namespace_bts1500.1.res.oracle
[kernel] Parsing typedef_namespace_bts1500.c (with preprocessing)
[kernel] typedef_namespace_bts1500.c:21: 
  syntax error:
  Location: between lines 21 and 24, before or at token: y
  19    int main () {
  20      digit x = 4;
  
  21      int digit = 3;
  22      // error: digit is now a variable
  23    #ifdef HIDING_TYPEDEF
  24      digit y = 5;
  
  25    #endif
  26      return x + digit+A;
[kernel] Frama-C aborted: invalid user input.
